[tool.pdm]

[project]
name = "aws_sysops_cert_study"
version = "1.0.0"
description = "Examples while working with AWS SysOps Certification Guide Book"
authors = [
    {name = "Panagiotis Matsinopoulos", email = "panagiotis@matsinopoulos.gr"},
]
dependencies = [
    "boto3>=1.26.84",
]
requires-python = ">=3.11"
license = {text = "MIT"}
